# ML-Zoomcamp

./: .gitignore  README.md
Module 1/: hw_1.ipynb  into_to_numpy.ipynb  pandas.ipynb
Module 2/: hw2.ipynb  price_prediction_cars.ipynb
Module 3/: churn_prediction.ipynb  hw3.ipynb
Module 4/: churn_prediction_4.ipynb  hw4.ipynb
Module 5/: ping.py  pyproject.toml  workshop-uv-fastapi.ipynb
Module 6/: credit_scoring.ipynb  hw6.ipynb
